--- a/web/assets/index.html
+++ b/web/assets/index.html
@@ -11,13 +11,13 @@
             margin: 0;
             background: #282C34;
             color: #FFFFFF;
+            height: 100%;
         }
 
         body {
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
-			height: 100vh;
             text-align: center;
             font-family: "Roboto", sans-serif;
         }
@@ -58,9 +58,6 @@
 
         #startStopBtn.running:before {
             content: "停止";
-        }
-
-        #test {
         }
 
         div.testArea {
